# rto-rust

./: AGENTS.md  CONCEPTS.md  Cargo.toml  Makefile  README.md
src/: main.rs
src/calc/: mod.rs  quarter_calc.rs  workday.rs
src/cmd/: backup.rs  holidays.rs  init.rs  mod.rs  root.rs  stats.rs  vacations.rs
src/data/: app_settings.rs  badge_entry.rs  event.rs  holiday.rs  init.rs  mod.rs  persistence.rs  quarter.rs  time_period.rs  vacation.rs
src/ui/: calendar_view.rs  mod.rs
