[package]
name = "rto"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rto"
path = "src/main.rs"

[dependencies]
clap          = { version = "4", features = ["derive"] }
ratatui       = "0.30"
crossterm     = "0.29"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
chrono        = { version = "0.4", features = ["serde"] }
anyhow        = "1"
serde_norway = "0.9.42"

[dev-dependencies]
tempfile = "3"
